[gd_scene load_steps=41 format=2]

[ext_resource path="res://logo/SimpleTools_logo_small.png" type="Texture" id=1]
[ext_resource path="res://button/Button5normal.png" type="Texture" id=2]
[ext_resource path="res://button/Button5pressed.png" type="Texture" id=3]
[ext_resource path="res://button/Button6normal.png" type="Texture" id=4]
[ext_resource path="res://button/Button2normal.png" type="Texture" id=5]
[ext_resource path="res://button/Button6pressed.png" type="Texture" id=6]
[ext_resource path="res://button/Button1normal.png" type="Texture" id=7]
[ext_resource path="res://button/Button1pressed.png" type="Texture" id=8]
[ext_resource path="res://button/Button3normal.png" type="Texture" id=9]
[ext_resource path="res://button/Button2pressed.png" type="Texture" id=10]
[ext_resource path="res://button/Button3pressed.png" type="Texture" id=11]
[ext_resource path="res://button/Button4normal.png" type="Texture" id=12]
[ext_resource path="res://button/Button4pressed.png" type="Texture" id=13]
[ext_resource path="res://button/ButtonDOTpressed.png" type="Texture" id=14]
[ext_resource path="res://button/new/CANCELpressed.png" type="Texture" id=15]
[ext_resource path="res://button/ButtonDOTnormal.png" type="Texture" id=16]
[ext_resource path="res://button/new/CLEARnormal.png" type="Texture" id=17]
[ext_resource path="res://button/new/OKnormal.png" type="Texture" id=18]
[ext_resource path="res://button/new/CANCELnormal.png" type="Texture" id=19]
[ext_resource path="res://button/new/OKpressed.png" type="Texture" id=20]
[ext_resource path="res://button/new/BACKSPACEnormal.png" type="Texture" id=21]
[ext_resource path="res://button/Button0normal.png" type="Texture" id=22]
[ext_resource path="res://button/Button0pressed.png" type="Texture" id=23]
[ext_resource path="res://button/Button9pressed.png" type="Texture" id=24]
[ext_resource path="res://button/ButtonComma000pressed.png" type="Texture" id=25]
[ext_resource path="res://button/Button9normal.png" type="Texture" id=26]
[ext_resource path="res://button/Button8normal.png" type="Texture" id=27]
[ext_resource path="res://button/ButtonComma000normal.png" type="Texture" id=28]
[ext_resource path="res://button/Button8pressed.png" type="Texture" id=29]
[ext_resource path="res://button/Button7pressed.png" type="Texture" id=30]
[ext_resource path="res://button/Button7normal.png" type="Texture" id=31]
[ext_resource path="res://fonts/MyriadPro-Regular.otf" type="DynamicFontData" id=32]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=33]
[ext_resource path="res://scripts/Numpad.gd" type="Script" id=34]
[ext_resource path="res://logo/productSmall.png" type="Texture" id=35]
[ext_resource path="res://mockup/CMCalculator - Screen 05 - Keypad v2.png" type="Texture" id=36]
[ext_resource path="res://button/new/CLEARpressed.png" type="Texture" id=37]
[ext_resource path="res://button/new/BACKSPACEpressed.png" type="Texture" id=38]

[sub_resource type="DynamicFont" id=1]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 33 )

[sub_resource type="DynamicFont" id=2]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 32 )

[node name="Numpad" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.707
margin_bottom = 175.8
script = ExtResource( 34 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 124.232
color = Color( 1, 0.964706, 0.835294, 1 )

[node name="Mock-up" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 36 )

[node name="LogoMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -748.0
custom_constants/margin_top = 32
custom_constants/margin_left = 35

[node name="TopControl" type="Control" parent="LogoMarginContainer"]
margin_left = 35.0
margin_top = 32.0
margin_right = 600.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="LogoMarginContainer/TopControl"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 71

[node name="LogoTextureRect" type="TextureRect" parent="LogoMarginContainer/TopControl/HBoxContainer"]
margin_right = 275.0
margin_bottom = 197.0
texture = ExtResource( 1 )

[node name="ProductTextureRect" type="TextureRect" parent="LogoMarginContainer/TopControl/HBoxContainer"]
margin_left = 346.0
margin_right = 543.0
margin_bottom = 197.0
texture = ExtResource( 35 )

[node name="TopMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 301.0
margin_bottom = -643.0
custom_constants/margin_top = 19
custom_constants/margin_left = 35

[node name="TopControl" type="Control" parent="TopMarginContainer"]
margin_left = 35.0
margin_top = 19.0
margin_right = 600.0
margin_bottom = 19.0

[node name="NumberLabel" type="Label" parent="TopMarginContainer/TopControl"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pertinent Label"

[node name="Row2MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 1.0
margin_right = 300.0
margin_bottom = 471.0
custom_constants/margin_top = 406
custom_constants/margin_left = 33

[node name="Row2Control" type="Control" parent="Row2MarginContainer"]
margin_left = 33.0
margin_top = 406.0
margin_right = 600.0
margin_bottom = 470.0

[node name="NumberInput" type="LineEdit" parent="Row2MarginContainer/Row2Control"]
unique_name_in_owner = true
margin_right = 58.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_colors/font_color_uneditable = Color( 0.988235, 0.862745, 0.721569, 1 )
custom_constants/minimum_spaces = 59
custom_fonts/font = SubResource( 2 )
align = 2
editable = false
virtual_keyboard_enabled = false

[node name="BottomMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -899.768
margin_right = 300.0
margin_bottom = 124.232
custom_constants/margin_right = -10
custom_constants/margin_bottom = 16

[node name="BottomControl" type="Control" parent="BottomMarginContainer"]
margin_right = 610.0
margin_bottom = 1008.0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomMarginContainer/BottomControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 470.0
margin_right = -11.0

[node name="NumberButtons" type="GridContainer" parent="BottomMarginContainer/BottomControl/VBoxContainer"]
margin_right = 578.0
margin_bottom = 428.0
columns = 3

[node name="Button1" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_right = 186.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Button2" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 190.0
margin_right = 376.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )

[node name="Button3" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 380.0
margin_right = 566.0
margin_bottom = 104.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )

[node name="Button4" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_top = 108.0
margin_right = 186.0
margin_bottom = 212.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="Button5" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 190.0
margin_top = 108.0
margin_right = 376.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Button6" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 380.0
margin_top = 108.0
margin_right = 566.0
margin_bottom = 212.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )

[node name="Button7" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_top = 216.0
margin_right = 186.0
margin_bottom = 320.0
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 30 )

[node name="Button8" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 190.0
margin_top = 216.0
margin_right = 376.0
margin_bottom = 320.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 29 )

[node name="Button9" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 380.0
margin_top = 216.0
margin_right = 566.0
margin_bottom = 320.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 24 )

[node name="Button000" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_top = 324.0
margin_right = 186.0
margin_bottom = 428.0
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 25 )

[node name="Button0" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 190.0
margin_top = 324.0
margin_right = 376.0
margin_bottom = 428.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )

[node name="Dot" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons"]
margin_left = 380.0
margin_top = 324.0
margin_right = 566.0
margin_bottom = 428.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )

[node name="NavigationButtons" type="GridContainer" parent="BottomMarginContainer/BottomControl/VBoxContainer"]
margin_top = 432.0
margin_right = 578.0
margin_bottom = 536.0
columns = 4

[node name="Clear" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons"]
margin_right = 139.0
margin_bottom = 104.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 37 )

[node name="Backspace" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons"]
margin_left = 143.0
margin_right = 282.0
margin_bottom = 104.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 38 )

[node name="Cancel" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons"]
margin_left = 286.0
margin_right = 425.0
margin_bottom = 104.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 15 )

[node name="OK" type="TextureButton" parent="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons"]
margin_left = 429.0
margin_right = 568.0
margin_bottom = 104.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )

[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button000" to="." method="_on_Button000_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NumberButtons/Dot" to="." method="_on_Dot_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons/Backspace" to="." method="_on_Backspace_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="BottomMarginContainer/BottomControl/VBoxContainer/NavigationButtons/OK" to="." method="_on_OK_pressed"]
